create table actors (id bigint not null auto_increment, avatar_url varchar(255), name varchar(255) not null, primary key (id)) engine=InnoDB;
create table audit_logs (id bigint not null auto_increment, target_id bigint, timestamp datetime(6), details varchar(1000), action varchar(255) not null, target varchar(255) not null, username varchar(255) not null, primary key (id)) engine=InnoDB;
create table booking_combos (price decimal(10,2) not null, quantity integer not null, booking_id bigint not null, combo_id bigint not null, id bigint not null auto_increment, primary key (id)) engine=InnoDB;
create table booking_details (price decimal(10,2) not null, booking_id bigint not null, id bigint not null auto_increment, seat_id bigint, seat_code varchar(255), primary key (id)) engine=InnoDB;
create table bookings (total_price decimal(10,2) not null, created_at datetime(6), customer_id bigint, id bigint not null auto_increment, promotion_id bigint, showtime_id bigint not null, booking_code varchar(255) not null, status enum ('PENDING','CONFIRMED','CANCELLED','CHECKED_IN') not null, primary key (id)) engine=InnoDB;
create table branch_combos (is_active bit, price decimal(10,2) not null, stock_quantity integer not null, branch_id bigint not null, combo_id bigint not null, id bigint not null auto_increment, primary key (id)) engine=InnoDB;
create table branch_movies (is_active bit, priority_level integer, assigned_at datetime(6), branch_id bigint not null, id bigint not null auto_increment, movie_id bigint not null, status enum ('COMING','SHOWING','STOPPED','NOW_SHOWING','PRE_RELEASE') not null, primary key (id)) engine=InnoDB;
create table branch_pricing_rules (priority integer, branch_id bigint, id bigint not null auto_increment, rule_id bigint, primary key (id)) engine=InnoDB;
create table branches (is_active bit, id bigint not null auto_increment, address varchar(255), city varchar(255), name varchar(255) not null, phone varchar(255), primary key (id)) engine=InnoDB;
create table combos (is_active bit, price decimal(10,2) not null, stock_quantity integer not null, id bigint not null auto_increment, description varchar(255), image_url varchar(255), name varchar(255) not null, primary key (id)) engine=InnoDB;
create table customers (points integer not null, total_spending decimal(15,2), created_at datetime(6), id bigint not null auto_increment, membership_level_id bigint, user_id bigint, email varchar(255), full_name varchar(255) not null, phone varchar(255), primary key (id)) engine=InnoDB;
create table directors (id bigint not null auto_increment, avatar_url varchar(255), name varchar(255) not null, primary key (id)) engine=InnoDB;
create table formats (id bigint not null auto_increment, description varchar(255), name varchar(255) not null, primary key (id)) engine=InnoDB;
create table genres (id bigint not null auto_increment, name varchar(255) not null, primary key (id)) engine=InnoDB;
create table membership_benefits (id bigint not null auto_increment, membership_level_id bigint not null, benefit_type varchar(255) not null, benefit_value varchar(255) not null, primary key (id)) engine=InnoDB;
create table membership_levels (min_spending decimal(15,2), priority integer not null, id bigint not null auto_increment, name varchar(255) not null, primary key (id)) engine=InnoDB;
create table movie_actors (actor_id bigint not null, movie_id bigint not null, primary key (actor_id, movie_id)) engine=InnoDB;
create table movie_directors (director_id bigint not null, movie_id bigint not null, role enum ('MAIN','CO_DIRECTOR') not null, primary key (director_id, movie_id)) engine=InnoDB;
create table movie_formats (format_id bigint not null, movie_id bigint not null, primary key (format_id, movie_id)) engine=InnoDB;
create table movie_genres (genre_id bigint not null, movie_id bigint not null, primary key (genre_id, movie_id)) engine=InnoDB;
create table movies (duration integer not null, priority_level integer, rating float(53), release_date date, id bigint not null auto_increment, tmdb_id bigint, description TEXT, origin_country varchar(255), poster_url varchar(255), title varchar(255) not null, trailer_url varchar(255), age_rating enum ('P','K','T13','T16','T18'), status enum ('COMING','SHOWING','STOPPED','NOW_SHOWING','PRE_RELEASE') not null, primary key (id)) engine=InnoDB;
create table notifications (is_read bit, created_at datetime(6), id bigint not null auto_increment, user_id bigint not null, message TEXT not null, title varchar(255) not null, type enum ('BOOKING','REMINDER','PROMOTION','SYSTEM') not null, primary key (id)) engine=InnoDB;
create table payments (amount decimal(10,2) not null, booking_id bigint not null, id bigint not null auto_increment, paid_at datetime(6), transaction_id varchar(255), payment_method VARCHAR(50) not null, payment_status enum ('PENDING','SUCCESS','FAILED','REFUNDED') not null, primary key (id)) engine=InnoDB;
create table pricing_conditions (id bigint not null auto_increment, rule_id bigint, description varchar(255), value varchar(255) not null, type enum ('DAY_OF_WEEK','TIME_RANGE','DATE_RANGE','ROOM_TYPE','SEAT_TYPE','BRANCH','SHOW_FORMAT','MOVIE_AGE_RATING','MEMBER_TIER') not null, primary key (id)) engine=InnoDB;
create table pricing_rules (impact_value decimal(38,2), is_active bit, is_stackable bit, is_system TINYINT(1) DEFAULT 0, max_discount_limit decimal(38,2), priority integer not null, id bigint not null auto_increment, description varchar(255), name varchar(255), category enum ('BASE','SURCHARGE','DISCOUNT','TAX'), impact_type enum ('ADDITIVE','PERCENTAGE','SUBTRACTIVE','FIXED'), primary key (id)) engine=InnoDB;
create table promotions (discount_value decimal(10,2) not null, end_date date not null, is_active bit, is_redeemable bit, max_discount_amount decimal(10,2), min_order_amount decimal(10,2), required_points integer, start_date date not null, usage_limit integer, used_count integer, id bigint not null auto_increment, min_level_id bigint, code varchar(255) not null, name varchar(255) not null, discount_type enum ('PERCENT','FIXED') not null, primary key (id)) engine=InnoDB;
create table room_type_formats (format_id bigint not null, room_type_id varchar(255) not null, primary key (format_id, room_type_id)) engine=InnoDB;
create table room_types (id varchar(255) not null, name varchar(255), primary key (id)) engine=InnoDB;
create table rooms (capacity integer not null, num_cols integer, num_rows integer, branch_id bigint not null, id bigint not null auto_increment, name varchar(255) not null, room_type_id varchar(255) not null, status enum ('ACTIVE','MAINTENANCE','INACTIVE'), primary key (id)) engine=InnoDB;
create table seat_prices (is_active bit, price decimal(10,2) not null, id bigint not null auto_increment, room_type_id varchar(255) not null, seat_type_id varchar(255) not null, primary key (id)) engine=InnoDB;
create table seat_types (id varchar(255) not null, name varchar(255), primary key (id)) engine=InnoDB;
create table seats (col_num integer not null, status bit, id bigint not null auto_increment, room_id bigint not null, row_char varchar(255) not null, seat_type_id varchar(255) not null, primary key (id)) engine=InnoDB;
create table showtimes (total_seats integer not null, end_time datetime(6) not null, format_id bigint, id bigint not null auto_increment, movie_id bigint not null, room_id bigint not null, start_time datetime(6) not null, status enum ('UPCOMING','SHOWING','ENDED','CANCELLED') not null, primary key (id)) engine=InnoDB;
create table staffs (branch_id bigint not null, id bigint not null auto_increment, user_id bigint not null, full_name varchar(255), position varchar(255), staff_code varchar(255), primary key (id)) engine=InnoDB;
create table users (status bit, created_at datetime(6), id bigint not null auto_increment, email varchar(255) not null, password varchar(255) not null, username varchar(255) not null, role enum ('ADMIN','MANAGER','STAFF','CUSTOMER') not null, primary key (id)) engine=InnoDB;
alter table bookings add constraint UK_q97166k18hklq6ls46osbrftx unique (booking_code);
alter table branch_combos add constraint UK4ch96pkllcvla32iaj8limogt unique (branch_id, combo_id);
alter table branch_movies add constraint UKj7hhfkgoxpcw0e5km6q2jmcjm unique (branch_id, movie_id);
alter table customers add constraint UK_euat1oase6eqv195jvb71a93s unique (user_id);
alter table formats add constraint UK_71su72rat45de3kp5tqx016no unique (name);
alter table membership_levels add constraint UK_l52dwm7ydgg5oonc60ek2b6b1 unique (name);
alter table movies add constraint UK_p5019n1rxysavm3imviq5028i unique (tmdb_id);
alter table payments add constraint UK_nuscjm6x127hkb15kcb8n56wo unique (booking_id);
alter table promotions add constraint UK_jdho73ymbyu46p2hh562dk4kk unique (code);
alter table seat_prices add constraint UKog4mg8qpydil46jaou4q6rdic unique (room_type_id, seat_type_id);
alter table staffs add constraint UK_22xf2k8uqtauv6jjon7g9e069 unique (user_id);
alter table staffs add constraint UK_gv3vs910jx6y6bftfxsxvm2vi unique (staff_code);
alter table users add constraint UK_6dotkott2kjsp8vw4d0m25fb7 unique (email);
alter table users add constraint UK_r43af9ap4edm43mmtq01oddj6 unique (username);
alter table booking_combos add constraint FKibtryce575stcoiwhwh15l6jf foreign key (booking_id) references bookings (id);
alter table booking_combos add constraint FKnxrwkgbu2w9vw3kxqp2ovurcn foreign key (combo_id) references combos (id);
alter table booking_details add constraint FKkbcan6ybv86uappnh0qtdmvas foreign key (booking_id) references bookings (id);
alter table booking_details add constraint FKgphl9xdom8314je7ajy36ov2h foreign key (seat_id) references seats (id);
alter table bookings add constraint FKbvfibgflhsb0g2hnjauiv5khs foreign key (customer_id) references customers (id);
alter table bookings add constraint FKk4byobgkjv3y3952wwpxyep7o foreign key (promotion_id) references promotions (id);
alter table bookings add constraint FKc7q4u7vleq90vlvy8c7lmwtyl foreign key (showtime_id) references showtimes (id);
alter table branch_combos add constraint FK5tr76i8246tceerugiln1plc3 foreign key (branch_id) references branches (id);
alter table branch_combos add constraint FKosike74aiw20qictgrpsn9pvg foreign key (combo_id) references combos (id);
alter table branch_movies add constraint FK3xmgsm9j12omv6y8pp5uusaph foreign key (branch_id) references branches (id);
alter table branch_movies add constraint FKdma89pi9wb2rci0bkfb8g4g8g foreign key (movie_id) references movies (id);
alter table branch_pricing_rules add constraint FKisclucqlkndfqoklnqegy2xpi foreign key (branch_id) references branches (id);
alter table branch_pricing_rules add constraint FKcfibknxsy65oes82dygu25k9s foreign key (rule_id) references pricing_rules (id);
alter table customers add constraint FKd9uqprqrqvw7mld9mrc3x2j9n foreign key (membership_level_id) references membership_levels (id);
alter table customers add constraint FKrh1g1a20omjmn6kurd35o3eit foreign key (user_id) references users (id);
alter table membership_benefits add constraint FKi26f1o2hetpyv9536uedj90fj foreign key (membership_level_id) references membership_levels (id);
alter table movie_actors add constraint FK7svt4y6p0f9gpjy10awtubp02 foreign key (actor_id) references actors (id);
alter table movie_actors add constraint FKs4rlt03tdf55rwso4uyrwm0oq foreign key (movie_id) references movies (id);
alter table movie_directors add constraint FKabpc9kvk8dao6yb3xro5i916r foreign key (director_id) references directors (id);
alter table movie_directors add constraint FK90u08nnfro53e8vy5bgkkf77o foreign key (movie_id) references movies (id);
alter table movie_formats add constraint FK18tml9u5bsusf7tv1wy6npemi foreign key (format_id) references formats (id);
alter table movie_formats add constraint FK6ogd2ycfpfa0905gvxj3v71wr foreign key (movie_id) references movies (id);
alter table movie_genres add constraint FKnfpjuak0xiqpca3gjkwrixiig foreign key (genre_id) references genres (id);
alter table movie_genres add constraint FK4ak9svw913jblkfgru84h2phd foreign key (movie_id) references movies (id);
alter table notifications add constraint FK9y21adhxn0ayjhfocscqox7bh foreign key (user_id) references users (id);
alter table payments add constraint FKc52o2b1jkxttngufqp3t7jr3h foreign key (booking_id) references bookings (id);
alter table pricing_conditions add constraint FK426urnldolut988w562ysokbi foreign key (rule_id) references pricing_rules (id);
alter table promotions add constraint FK7153cp443w9jgh30pox5xp7hg foreign key (min_level_id) references membership_levels (id);
alter table room_type_formats add constraint FKcj62i7pjw94prsy9fgaja6yeg foreign key (format_id) references formats (id);
alter table room_type_formats add constraint FKsyktih6jvun9jladndckyu136 foreign key (room_type_id) references room_types (id);
alter table rooms add constraint FKi1eu1fwwr964lh073mt43w3g2 foreign key (branch_id) references branches (id);
alter table rooms add constraint FKh9m2n1paq5hmd3u0klfl7wsfv foreign key (room_type_id) references room_types (id);
alter table seat_prices add constraint FK7ui44hv2ie0vfhcvae4v6jiid foreign key (room_type_id) references room_types (id);
alter table seat_prices add constraint FK2nl4jsm4xg7o18d1q9evibv05 foreign key (seat_type_id) references seat_types (id);
alter table seats add constraint FKg993pi7ucgy616icmddq8u335 foreign key (room_id) references rooms (id);
alter table seats add constraint FKcp43h11k99445lq681irnensp foreign key (seat_type_id) references seat_types (id);
alter table showtimes add constraint FKfsc0r2patshbupdfeipyyel67 foreign key (format_id) references formats (id);
alter table showtimes add constraint FKeltpyuei1d5g3n6ikpsjwwil6 foreign key (movie_id) references movies (id);
alter table showtimes add constraint FKrumrrbei9jppryk4teoyoetit foreign key (room_id) references rooms (id);
alter table staffs add constraint FKqr601gcg9875ic2yan8lp162b foreign key (branch_id) references branches (id);
alter table staffs add constraint FKamgwfug55gkfkjidp88wyaj37 foreign key (user_id) references users (id);
